# GeomRel

./: CMakeLists.txt  README.md
api/: GRBuilder  GRCylinder  GRLine  GRNode  GRVector  GeomRel  geomrel.h  grbuilder.h  grcylinder.h  grline.h  grnode.h  grvector.h
src/: grcylinder.cpp  grline.cpp  grnode.cpp
